{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 113,
  "lineage": "72443772-bfdc-6f32-20b5-af37c6d2996e",
  "resources": [
    {
      "module": "module.argocd",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd/argocd",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/certificate-arn": "arn:aws:acm:ap-south-1:457724887427:certificate/920f6384-f49a-40ae-9b9d-afc2b3b84a64",
                  "alb.ingress.kubernetes.io/listen-ports": "[{\"HTTP\":80},{\"HTTPS\":443}]",
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/ssl-redirect": "443",
                  "alb.ingress.kubernetes.io/target-type": "ip",
                  "external-dns.alpha.kubernetes.io/hostname": "argocd.snapcart.dev",
                  "kubernetes.io/ingress.class": "alb"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "argocd",
                "namespace": "argocd",
                "resource_version": "10078",
                "uid": "981b102a-9320-408e-b77f-4d9bacee2d3e"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "alb",
                "rule": [
                  {
                    "host": "argocd.snapcart.dev",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "argocd-server",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "k8s-argocd-argocd-119f2211df-776169312.ap-south-1.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "argocd",
            "namespace": "argocd"
          },
          "dependencies": [
            "data.aws_eks_cluster.this",
            "data.aws_eks_cluster_auth.this",
            "data.terraform_remote_state.infra",
            "module.argocd.helm_release.this",
            "module.argocd.kubernetes_namespace.this",
            "module.platform_acm.aws_acm_certificate.this"
          ]
        }
      ]
    },
    {
      "module": "module.argocd",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "8451",
                "uid": "7992721f-f88f-4180-a8bc-cd3fccf97104"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "argocd"
          },
          "dependencies": [
            "data.aws_eks_cluster.this",
            "data.aws_eks_cluster_auth.this",
            "data.terraform_remote_state.infra"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins/jenkins",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/certificate-arn": "arn:aws:acm:ap-south-1:457724887427:certificate/920f6384-f49a-40ae-9b9d-afc2b3b84a64",
                  "alb.ingress.kubernetes.io/listen-ports": "[{\"HTTP\":80},{\"HTTPS\":443}]",
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/ssl-redirect": "443",
                  "alb.ingress.kubernetes.io/target-type": "ip",
                  "external-dns.alpha.kubernetes.io/hostname": "jenkins.snapcart.dev",
                  "kubernetes.io/ingress.class": "alb"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "jenkins",
                "namespace": "jenkins",
                "resource_version": "86886",
                "uid": "0c8a3bcb-22a0-413c-9d64-69964b14fd5a"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "alb",
                "rule": [
                  {
                    "host": "jenkins.snapcart.dev",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "jenkins",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "jenkins",
            "namespace": "jenkins"
          },
          "dependencies": [
            "data.aws_eks_cluster.this",
            "data.aws_eks_cluster_auth.this",
            "data.terraform_remote_state.infra",
            "module.jenkins.helm_release.this",
            "module.jenkins.kubernetes_namespace.this",
            "module.platform_acm.aws_acm_certificate.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins",
            "metadata": [
              {
                "generation": 0,
                "name": "jenkins",
                "resource_version": "8453",
                "uid": "dfe8178b-48c5-4ed0-851f-68613fa7de2f"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "jenkins"
          },
          "dependencies": [
            "data.aws_eks_cluster.this",
            "data.aws_eks_cluster_auth.this",
            "data.terraform_remote_state.infra"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/grafana",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/certificate-arn": "arn:aws:acm:ap-south-1:457724887427:certificate/920f6384-f49a-40ae-9b9d-afc2b3b84a64",
                  "alb.ingress.kubernetes.io/listen-ports": "[{\"HTTP\":80},{\"HTTPS\":443}]",
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/ssl-redirect": "443",
                  "alb.ingress.kubernetes.io/target-type": "ip",
                  "external-dns.alpha.kubernetes.io/hostname": "grafana.snapcart.dev",
                  "kubernetes.io/ingress.class": "alb"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "grafana",
                "namespace": "monitoring",
                "resource_version": "10698",
                "uid": "ea170774-0a0d-4709-82b3-c7edc8df63ad"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "alb",
                "rule": [
                  {
                    "host": "grafana.snapcart.dev",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "monitoring-grafana",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "k8s-monitori-grafana-3ef7723885-2040956934.ap-south-1.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "grafana",
            "namespace": "monitoring"
          },
          "dependencies": [
            "data.aws_eks_cluster.this",
            "data.aws_eks_cluster_auth.this",
            "data.terraform_remote_state.infra",
            "module.platform_acm.aws_acm_certificate.this"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "8452",
                "uid": "4415b34b-d490-45b9-b903-4e919fe614f2"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "monitoring"
          },
          "dependencies": [
            "data.aws_eks_cluster.this",
            "data.aws_eks_cluster_auth.this",
            "data.terraform_remote_state.infra"
          ]
        }
      ]
    }
  ]
}